[package]
name = "titan-ipoverlay-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls"] }
tungstenite = { version = "0.21", default-features = false, features = ["__rustls-tls"] }
reqwest = { version = "0.12", default-features = false, features = ["json","gzip","brotli","rustls-tls"] }
prost = "0.13"
prost-derive = "0.13"
bytes = "1.4"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.4"
clap = { version = "4", features = ["derive"] }
url = "2"
futures-util = "0.3"
tracing = "0.1.41"

[build-dependencies]
prost-build = "0.13"

[features]
default = []